  We set the content-length header in the environment, such that applications
  effectively never know the original request was a T-E: chunked request; it
  will appear to them as if the request is a non-chunked request with an
  accurate content-length.

- Cope with the fact that the ``Transfer-Encoding`` value is case-insensitive.

0.8.7 (2013-08-29)
------------------

- The HTTP version of the response returned by waitress when it catches an
  exception will now match the HTTP request version.

- Fix: CONNECTION header will be HTTP_CONNECTION and not CONNECTION_TYPE
  (see https://github.com/Pylons/waitress/issues/13)

0.8.6 (2013-08-12)
------------------

- Do alternate type of checking for UNIX socket support, instead of checking
  for platform == windows.

- Functional tests now use multiprocessing module instead of subprocess module,
  speeding up test suite and making concurrent execution more reliable.

- Runner now appends the current working directory to ``sys.path`` to support
  running WSGI applications from a directory (i.e., not installed in a
  virtualenv).

- Add a ``url_prefix`` adjustment setting.  You can use it by passing
  ``script_name='/foo'`` to ``waitress.serve`` or you can use it in a
  ``PasteDeploy`` ini file as ``script_name = /foo``.  This will cause the WSGI
  ``SCRIPT_NAME`` value to be the value passed minus any trailing slashes you
  add, and it will cause the ``PATH_INFO`` of any request which is prefixed
  with this value to be stripped of the prefix.  You can use this instead of
  PasteDeploy's ``prefixmiddleware`` to always prefix the path.

0.8.5 (2013-05-27)
------------------

- Fix runner multisegment imports in some Python 2 revisions (see
  https://github.com/Pylons/waitress/pull/34).

- For compatibility, WSGIServer is now an alias of TcpWSGIServer. The
  signature of BaseWSGIServer is now compatible with WSGIServer pre-0.8.4.

0.8.4 (2013-05-24)
------------------
